--- a/po/en_GB/install.po
+++ b/po/en_GB/install.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Andi Chandler <andi@gowling.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-13 13:30-0400\n"
-"PO-Revision-Date: 2015-03-13 21:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/civicrm/language/en_GB/)\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-03-12 10:39+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
+"Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,25 +19,25 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "Oops! Please correct your install location"
 
 #: install/index.php
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Please untar (uncompress) your downloaded copy of CiviCRM in the <strong>%1</strong> directory below your Drupal root directory."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "Oops! CiviCRM is already installed"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[your Drupal root directory]"
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "Installation Guide"
 
 #: install/index.php
 msgid ""
@@ -45,29 +46,29 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr ""
+msgstr "CiviCRM has already been installed. <ul><li>To <strong>start over</strong>, you must delete or rename the existing CiviCRM settings file - <strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To <strong>upgrade an existing installation</strong>, <a href='%2'>refer to the online documentation</a>.</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Oops! Incorrect CiviCRM version"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "This installer can only be used for the Drupal version of CiviCRM."
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Oops! Incorrect Drupal version"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please ensure that '%1' exists if you are running Drupal 7.0 and over."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "This installer can only be used for the WordPress version of CiviCRM."
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -91,7 +92,7 @@ msgstr "Does the server exist?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Can't find the a MySQL server on '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -107,72 +108,72 @@ msgstr "MySQL version at least %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "MySQL version %1 or higher is required, you are running MySQL %2."
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
-msgstr ""
+msgstr "Is auto_increment_increment set to 1"
 
 #: install/index.php
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
-msgstr ""
+msgstr "An auto_increment_increment value greater than 1 is not currently supported. Please see issue CRM-7923 for further details and potential workaround."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
-msgstr ""
+msgstr "Does MySQL thread_stack meet minimum (%1k)"
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr ""
+msgstr "Can I access/create the database?"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
-msgstr ""
+msgstr "I can't create new databases and the database '%1' doesn't exist."
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Can I access/create InnoDB tables in the database?"
 
 #: install/index.php
 msgid ""
 "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM"
 " but is either not available or not enabled in this MySQL database server."
-msgstr ""
+msgstr "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM but is either not available or not enabled in this MySQL database server."
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
-msgstr ""
+msgstr "Can I create temporary tables in the database?"
 
 #: install/index.php
 msgid ""
 "Unable to create temporary tables. This MySQL user is missing the CREATE "
 "TEMPORARY TABLES privilege."
-msgstr ""
+msgstr "Unable to create temporary tables. This MySQL user is missing the CREATE TEMPORARY TABLES privilege."
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr ""
+msgstr "Can I create lock tables in the database?"
 
 #: install/index.php
 msgid ""
 "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
-msgstr ""
+msgstr "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Can I create triggers in the database?"
 
 #: install/index.php
 msgid ""
 "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  "
 "privilege."
-msgstr ""
+msgstr "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  privilege."
 
 #: install/index.php
 msgid "PHP5 installed"
@@ -200,15 +201,15 @@ msgstr "Does the CiviCRM path contain PATH_SEPARATOR?"
 
 #: install/index.php
 msgid "The path %1 contains PATH_SEPARATOR (the %2 character)."
-msgstr ""
+msgstr "The path %1 contains PATH_SEPARATOR (the %2 character)."
 
 #: install/index.php
 msgid "Folder '%1' exists?"
-msgstr ""
+msgstr "Folder '%1' exists?"
 
 #: install/index.php
 msgid "There is no '%1' folder."
-msgstr ""
+msgstr "There is no '%1' folder."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
@@ -220,17 +221,17 @@ msgstr "I can't tell what webserver you are running"
 
 #: install/index.php
 msgid "Webserver config"
-msgstr ""
+msgstr "Webserver config"
 
 #: install/index.php
 msgid "Recognised webserver"
-msgstr ""
+msgstr "Recognised webserver"
 
 #: install/index.php
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "You seem to be using an unsupported webserver. The server variables SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
 
 #: install/index.php
 msgid "JSON support"
@@ -242,14 +243,14 @@ msgstr "JSON support not included in PHP."
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "XCache compatibility"
 
 #: install/index.php
 msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr ""
+msgstr "XCache is installed and there are known compatibility issues between XCache and CiviCRM. Consider using an alternative PHP caching mechanism or disable PHP caching altogether."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -258,17 +259,17 @@ msgstr "Memory allocated (PHP config option 'memory_limit')"
 #: install/index.php
 msgid ""
 "CiviCRM needs a minimum of %1 MB allocated to PHP, but recommends %2 MB."
-msgstr ""
+msgstr "CiviCRM needs a minimum of %1 MB allocated to PHP, but recommends %2 MB."
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "You only have %1 allocated"
 
 #: install/index.php
 msgid ""
 "We can't determine how much memory you have allocated. Install only if "
 "you're sure you've allocated at least %1 MB."
-msgstr ""
+msgstr "We can't determine how much memory you have allocated. Install only if you're sure you've allocated at least %1 MB."
 
 #: install/index.php
 msgid "The following problems are preventing me from installing CiviCRM:"
@@ -278,119 +279,119 @@ msgstr "The following problems are preventing me from installing CiviCRM:"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "You need PHP version %1 or later, only %2 is installed. Please upgrade your server, or ask your web-host to do so."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "PHP version %1 is not supported. PHP version earlier than %2 is required. You might want to downgrade your server, or ask your web-host to do so."
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "file '%1' not found"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "file '%1' found"
 
 #: install/index.php
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr ""
+msgstr "The user account used by your web-server %1 needs to be granted write access to the following directory in order to configure the CiviCRM settings file:"
 
 #: install/index.php
 msgid ""
 "Cannot determine the version of MySQL installed. Please ensure at least "
 "version %1 is installed."
-msgstr ""
+msgstr "Cannot determine the version of MySQL installed. Please ensure at least version %1 is installed."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr ""
+msgstr "Could not determine if MySQL has InnoDB support. Assuming no."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "MySQL server does have InnoDB support"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Could not determine if MySQL has InnoDB support. Assuming no"
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "Could not login to the database."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Could not select the database."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Could not create a temp table."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "Could not create a table in the database."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "Could not create a database trigger."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Could not connect to the database server."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Could not obtain a write lock for the database table."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Could not release the lock for the database table."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Could not query database server variables."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL server auto_increment_increment is 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Could not get information about the thread_stack of the database."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "MySQL \"thread_stack\" is %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "The database: '%1' does not exist."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Able to create a new database."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "user '%1' doesn't have CREATE DATABASE permissions."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
-msgstr ""
+msgstr "the following PHP variables are missing: %1"
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "Oops! Could not create database %1"
 
 #: install/index.php
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "We encountered an error when attempting to create the database. Please check your MySQL server permissions and the database name and try again."
 
 #: install/index.php
 msgid ""
@@ -400,21 +401,21 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr ""
+msgstr "Have you registered this site at CiviCRM.org? If not, please help strengthen the CiviCRM ecosystem by taking a few minutes to <a %1>fill out the site registration form</a>. The information collected will help us prioritise improvements, target our communications and build the community. If you have a technical role for this site, be sure to check Keep in Touch to receive technical updates (a low volume mailing list)."
 
 #: install/index.php
 msgid ""
 "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to"
 " upload images. All uploaded images are public."
-msgstr ""
+msgstr "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to upload images. All uploaded images are public."
 
 #: install/index.php
 msgid "CiviCRM Installed"
-msgstr ""
+msgstr "CiviCRM Installed"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "CiviCRM has been successfully installed"
 
 #: install/index.php
 msgid ""
@@ -422,13 +423,13 @@ msgid ""
 "authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Drupal user permissions have been automatically set - giving anonymous and authenticated users access to public CiviCRM forms and features. We recommend that you <a %1>review these permissions</a> to ensure that they are appropriate for your requirements (<a %2>learn more...</a>)"
 
 #: install/index.php
 msgid ""
 "Use the <a %1>Configuration Checklist</a> to review and configure settings "
 "for your new site"
-msgstr ""
+msgstr "Use the <a %1>Configuration Checklist</a> to review and configure settings for your new site"
 
 #: install/index.php
 msgid ""
@@ -436,11 +437,11 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "WordPress user permissions have been automatically set - giving Anonymous and Subscribers access to public CiviCRM forms and features. We recommend that you <a %1>review these permissions</a> to ensure that they are appropriate for your requirements (<a %2>learn more...</a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
-msgstr ""
+msgstr "<a %1>Refer to the online documentation for more information</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
@@ -448,7 +449,7 @@ msgstr "CiviCRM Installer"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Version %1"
 
 #: install/template.html
 msgid ""
@@ -508,7 +509,7 @@ msgstr "Change language"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Database Version and Connection Settings"
 
 #: install/template.html
 msgid ""
@@ -560,16 +561,16 @@ msgstr "Other Settings"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Re-check requirements"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "CiviCRM Database Details"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Drupal Database Details"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Requirements"
