--- a/po/mk/drupal-civicrm.po
+++ b/po/mk/drupal-civicrm.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jordan Jovanov <jovanovjoce@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Macedonian (http://www.transifex.com/projects/p/civicrm/language/mk/)\n"
+"PO-Revision-Date: 2016-03-15 10:23+0000\n"
+"Last-Translator: Jordan Jovanov <jovanovjoce@gmail.com>\n"
+"Language-Team: Macedonian (http://www.transifex.com/civicrm/civicrm/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -731,7 +732,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "First Name"
-msgstr ""
+msgstr "Име"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Middle Name"
