--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -8,6 +8,7 @@
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
+# elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Nicolas GAILLARD <ngaillard.vosges@gmail.com>, 2015
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-07 20:43+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-03-16 20:39+0000\n"
+"Last-Translator: elma dontovska <elmadont@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6395,7 +6396,7 @@ msgstr "Copier %1 vers %2"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "CiviContribute Component Settings"
-msgstr ""
+msgstr "Paramètres du composant CiviContribute"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
