--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -6,6 +6,7 @@
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
+# elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
 # Peter <webmaster@lebouclier.com>, 2016
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-30 14:32+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-17 09:42+0000\n"
+"Last-Translator: elma dontovska <elmadont@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1027,7 +1028,7 @@ msgid ""
 "You can not delete this case type -- it is assigned to %1 existing case "
 "record(s). If you do not want this case type to be used going forward, "
 "consider disabling it instead."
-msgstr ""
+msgstr "Vous ne pouvez pas supprimer ce type de dossier car il est affecté à %1 dossier(s) existant(s). Si vous ne souhaitez plus l'utiliser, il est préférable de le désactiver"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
@@ -1035,23 +1036,23 @@ msgstr "ID du type de dossier"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Name"
-msgstr ""
+msgstr "Libellé du type de dossier"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Title"
-msgstr ""
+msgstr "Titre du type de dossier"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Description"
-msgstr ""
+msgstr "Description du type de dossier"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Active"
-msgstr ""
+msgstr "Le type de dossier est Actif"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Reserved"
-msgstr ""
+msgstr "Le type de dossier est Réservé"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Weight"
@@ -1059,7 +1060,7 @@ msgstr ""
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Definition"
-msgstr ""
+msgstr "Description du type de dossier"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
@@ -1068,7 +1069,7 @@ msgstr ""
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Selected case is already linked."
-msgstr ""
+msgstr "Le dossier sélectionné est déjà lié."
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -1222,7 +1223,7 @@ msgstr "Voir activité"
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Voulez-vous <a %1>éditer l'activité existante</a> ?"
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
@@ -1254,23 +1255,23 @@ msgstr[1] ""
 
 #: CRM/Case/Info.php
 msgid "delete in CiviCase"
-msgstr ""
+msgstr "Supprimer dans CIviCase"
 
 #: CRM/Case/Info.php
 msgid "administer CiviCase"
-msgstr ""
+msgstr "Administrer CiviCase"
 
 #: CRM/Case/Info.php
 msgid "access my cases and activities"
-msgstr ""
+msgstr "accéder à mes dossiers et activités"
 
 #: CRM/Case/Info.php
 msgid "access all cases and activities"
-msgstr ""
+msgstr "accéder à l'intégralité des dossiers et activités"
 
 #: CRM/Case/Info.php
 msgid "add cases"
-msgstr ""
+msgstr "ajouter des dossiers"
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 #: xml/templates/message_templates/case_activity_html.tpl
