--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -5,6 +5,7 @@
 # Translators:
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
+# elma dontovska <elmadont@gmail.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 10:01+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"PO-Revision-Date: 2016-03-17 09:50+0000\n"
+"Last-Translator: elma dontovska <elmadont@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -842,7 +843,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Description"
-msgstr ""
+msgstr "Description du processeur"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
@@ -867,7 +868,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Supports Recurring?"
-msgstr ""
+msgstr "Le processeur supporte t'il la périodicité ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type De"
@@ -879,11 +880,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type is Default?"
-msgstr ""
+msgstr "Type de processeur par défaut ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Supports Recurring?"
-msgstr ""
+msgstr "Le type de processeur supporte t'il la périodicité ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Payment Type"
@@ -938,11 +939,11 @@ msgstr "Moyen de paiement :"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
-msgstr ""
+msgstr "Le type de processeur de paiement sélectionné a été supprimé.<br/>"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Description"
-msgstr ""
+msgstr "Description du type de processeur"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
@@ -966,7 +967,7 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Please enter value for tax rate"
-msgstr ""
+msgstr "Saisir la valeur du taux de taxe"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Is Tax? must be set for this financial account"
@@ -984,4 +985,4 @@ msgstr ""
 msgid ""
 "The default rate used to calculate the taxes collected into this account "
 "(e.g. for tax rate of 8.27%, enter 8.27)."
-msgstr ""
+msgstr "Le taux par défaut utilisé pour calculer les taxes collectées pour ce compte (par exemple, pour un taux à 20,6%, saisir 20,6)."
