--- a/po/pt_BR/install.po
+++ b/po/pt_BR/install.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2014
+# Gabriel Silva <gabrielrmas@gmail.com>, 2016
 # Kennedy Rodrigues de souza <kennedywork202@gmail.com>, 2015
 # Renan Meira Ferreira <doidormf@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-09-07 03:07+0000\n"
-"Last-Translator: Kennedy Rodrigues de souza <kennedywork202@gmail.com>\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-03-17 22:40+0000\n"
+"Last-Translator: Gabriel Silva <gabrielrmas@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +32,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "Oops! CiviCRM já está instalado"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
@@ -52,15 +53,15 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Oops! Versão incorreta do CiviCRM"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "Esse instalador só pode ser usado para a versão Drupal do CiviCRM"
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Oops! Versão incorreta do Drupal"
 
 #: install/index.php
 msgid ""
@@ -94,7 +95,7 @@ msgstr "Este servidor existe?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Não foi possível achar o servidor a MySQL em '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -114,7 +115,7 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
