--- a/po/hu_HU/campaign.po
+++ b/po/hu_HU/campaign.po
@@ -5,12 +5,13 @@
 # Translators:
 # Szabo Attila <atekka@gmail.com>, 2013
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Várady <zoltan@farm.co.hu>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:51+0000\n"
-"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
+"PO-Revision-Date: 2016-03-17 16:46+0000\n"
+"Last-Translator: Zoltán Várady <zoltan@farm.co.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -426,7 +427,7 @@ msgstr "Hoppá, úgy látszik nincs válaszlehetőség beállítva."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Order By >>"
-msgstr "Sorrendben >>"
+msgstr "Rendezés >>"
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Release Respondents >>"
@@ -984,7 +985,7 @@ msgstr "Köszönöm hogy aláírtad ezt a petíciót."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "STEP 2: Please Check Your Email"
-msgstr "Másodiik lépés: Kérlek ellenőrizd az emailed"
+msgstr "2. lépés: Kérlek ellenőrizd az emailed"
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
