--- a/po/sk_SK/contribute.po
+++ b/po/sk_SK/contribute.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Richard Mateffy <mateffyr@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-20 22:32+0000\n"
+"Last-Translator: Richard Mateffy <mateffyr@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -726,7 +727,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribute"
-msgstr ""
+msgstr "Prispej"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Honoree Email is not valid."
