--- a/po/sv_SE/drupal-civicrm.po
+++ b/po/sv_SE/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-25 20:08+0000\n"
+"PO-Revision-Date: 2016-03-21 14:29+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -317,7 +317,7 @@ msgstr ""
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "- select -"
-msgstr ""
+msgstr "- välj -"
 
 #: CRM/Core/Permission.php
 msgid "add contacts"
@@ -2640,7 +2640,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Current Status"
-msgstr ""
+msgstr "Nuvarande status"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select all CiviMember Status Rule(s) that represent current status."
