--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-26 23:37+0000\n"
+"PO-Revision-Date: 2016-03-21 12:39+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2014,7 +2014,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_notify_text.tpl
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Current Status"
-msgstr ""
+msgstr "Nuvarande status"
 
 #: CRM/Pledge/BAO/Query.php templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
@@ -2057,7 +2057,7 @@ msgstr ""
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "Scheduled Reminder"
-msgstr ""
+msgstr "Schemlägg påminnelse"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
