--- a/po/sv_SE/contribute.po
+++ b/po/sv_SE/contribute.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:46+0000\n"
+"PO-Revision-Date: 2016-03-21 14:29+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -254,7 +254,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Learn more."
-msgstr ""
+msgstr "Läs mer."
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Cancel Reason"
@@ -1437,7 +1437,7 @@ msgstr "Visa inbetalning från"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "A product with this name already exists. Please select another name."
-msgstr ""
+msgstr "En produkt med detta namn finns redan. Välj ett annat namn."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Upload from my computer"
@@ -1465,7 +1465,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Thumbnail URL"
-msgstr ""
+msgstr "URL till miniatyrbild"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image File Name"
@@ -1922,7 +1922,7 @@ msgstr "Inbetalning %%StatusMessage%%"
 
 #: CRM/Contribute/Page/DashBoard.php
 msgid "Contributions Charts"
-msgstr ""
+msgstr "Diagram över inbetalningar"
 
 #: CRM/Contribute/Page/ManagePremiums.php CRM/Contribute/Page/Premium.php
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
@@ -3394,7 +3394,7 @@ msgid ""
 "Enter colors in hexadecimal format prefixed with <em>#</em>. EXAMPLE: "
 "<em>#FF0000</em> = Red. You can do a web search on 'hexadecimal colors' to "
 "find a chart of color codes."
-msgstr ""
+msgstr "Ange färger i hexadecimalt format med ett 'brädgårdstecken' före, <em>#</em>. EXEMPEL: <em>#FF0000</em> = rött. Du kan söka på internet efter 'hexadecimala färgkoder' för att hitta tabeller med färgkoder."
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Recurring Contribution"
