--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -5,12 +5,12 @@
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2014-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-14 15:23+0000\n"
+"PO-Revision-Date: 2016-03-21 14:27+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +57,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No export format selected."
-msgstr ""
+msgstr "Inget exportformat valt."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Exported Date"
