--- a/po/sv_SE/install.po
+++ b/po/sv_SE/install.po
@@ -4,14 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-05-16 23:39+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
-"Language-Team: Swedish (http://www.transifex.com/projects/p/civicrm/language/sv/)\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-03-21 14:46+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -290,7 +290,7 @@ msgstr ""
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "fil '%1' kunde inte hittas"
 
 #: install/index.php
 msgid "file '%1' found"
@@ -334,7 +334,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "Kunde inte skapa en tabell i databasen."
 
 #: install/index.php
 msgid "Could not create a database trigger."
@@ -342,7 +342,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Kunde inte kontakta databasservern."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
